@@ -4,6 +4,8 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.Arrays;
@@ -94,9 +96,9 @@ public class Login {
      */
     private byte[] getHashedMasterPassword() throws IOException {
         if (LOGIN_FILE.exists()) {
-            FileInputStream fis = new FileInputStream(LOGIN_FILE);
-            byte[] fileContent = fis.readAllBytes();
-            fis.close();
+//            FileInputStream fis = new FileInputStream(LOGIN_FILE);
+            byte[] fileContent = Files.readAllBytes(Paths.get(LOGIN_FILE.getPath()));
+//            fis.close();
             return fileContent;
         }
         return null;
